--- a/src/app/wizard-json/wizard-json.component.scss
+++ b/src/app/wizard-json/wizard-json.component.scss
@@ -71,17 +71,39 @@
   margin-top: 10px;
 }
 
-.select-form{
-    margin-top: 0.25em;
-    .fd-select__control{
-        height: 2.28rem !important;
-    }
+.select-form {
+  margin-top: 0.25em;
+  .fd-select__control {
+    height: 2.28rem !important;
+  }
 }
 
-.fd-wizard-tall-content{
-    height: 100% !important;
+.fd-wizard-tall-content {
+  height: 100% !important;
 }
 
-.flex-content{
-    display: flex;
+.flex-content {
+  display: flex;
+}
+//Emisor
+.margin_name {
+  margin-left: 12px;
+  margin-right: 12px;
+}
+.wrapper {
+  display: grid;
+  gap: 10px 20px;
+}
+.item_col1 {
+  grid-column: 1;
+}
+.item_col2 {
+  grid-column: 2;
+}
+
+.ms-1 {
+  margin-left: 4px;
+}
+.mt-2 {
+  margin-top: 8px !important;
 }
