--- a/src/app/wizard-json/wizard-json.component.scss
+++ b/src/app/wizard-json/wizard-json.component.scss
@@ -90,7 +90,7 @@
   margin-left: 12px;
   margin-right: 12px;
 }
-.wrapper {
+.grid-content {
   display: grid;
   gap: 10px 20px;
 }
@@ -100,7 +100,18 @@
 .item_col2 {
   grid-column: 2;
 }
-
+.item_col3 {
+  grid-column: 3;
+}
+.item_col4 {
+  grid-column: 4;
+}
+.item_row1 {
+  grid-row: 1;
+}
+.item_row2 {
+  grid-row: 2;
+}
 .ms-1 {
   margin-left: 4px;
 }
